finish restaurant detail & fix responsive text overflow issue

--- a/client/src/components/Restaurant/ReviewPageDivider.css
+++ b/client/src/components/Restaurant/ReviewPageDivider.css
@@ -1,23 +1,3 @@
-.divid-container {
-  border-bottom: 1.5px solid #ebebeb;
-  max-width: 1000px;
-  min-width: 500px;
-  padding-bottom: 16px;
-  margin-left: 10%;
-  margin-bottom: 16px;
-}
-
-.divid-header {
-  font-family: "Arvo";
-  font-weight: 700;
-  font-size: 24px;
-  color: #25c8c1;
-}
-
-.divid-select .ant-select-selection-item {
-  font-weight: 700;
-}
-
 .revdivid-filter,
 .revdivid-sort {
   display: flex;
@@ -34,14 +14,6 @@
 }
 
 @media only screen and (max-width: 428px) {
-  .divid-container {
-    margin-left: 5%;
-  }
-
-  .divid-text {
-    display: none;
-  }
-
   .revdivid-filter {
     margin-left: 35px;
   }
